fix spinners on firefox

--- a/client/global.scss
+++ b/client/global.scss
@@ -44,3 +44,6 @@ input::-webkit-outer-spin-button,
 input[type='number']::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
+input[type='number'] {
+  -moz-appearance: textfield;
+}
